測試-新增表單

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       "default": {
         title: "歡迎來到邀請頁面",
         message: "請確認您的邀請碼是否正確。",
-        button: "返回首頁",
-        link: "https://www.example.com"
+        button: "參加婚禮GO!",
+        link: "https://docs.google.com/forms/d/e/1FAIpQLScqtqDqtzWxFfjNVssRJI-fF8QA7eAABio5qBMoYBfuMzzybA/viewform?usp=dialog"
       }
     };
 
