--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ const dataMap = {
     message: "這是您的邀請頁面，點擊下方按鈕進入。",
     button: "立即參加",
     link: "invite2.html",
-    secondButton: "前往官方網站",
-    secondLink: "https://www.example.com",
-    thirdButton: "分享邀請頁",
-    thirdLink: "https://www.example.com/share"
+    secondButton: "參加婚禮GO!",
+    secondLink: "https://docs.google.com/forms/d/e/1FAIpQLScqtqDqtzWxFfjNVssRJI-fF8QA7eAABio5qBMoYBfuMzzybA/viewform?usp=dialog",
+    thirdButton: "圖片輪播",
+    thirdLink: "background.html"
   },
   "default": {
     title: "歡迎來到邀請頁面",
