--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ const dataMap = {
   "6885dc": {
     title: "🎉 歡迎加入 VIP 專屬活動！",
     message: "這是您的邀請頁面，點擊下方按鈕進入。",
-    button: "立即參加",
+    button: "留下祝福",
     link: "invite2.html",
     secondButton: "參加婚禮GO!",
     secondLink: "https://docs.google.com/forms/d/e/1FAIpQLScqtqDqtzWxFfjNVssRJI-fF8QA7eAABio5qBMoYBfuMzzybA/viewform?usp=dialog",
