--- a/background.html
+++ b/background.html
@@ -3,183 +3,189 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>滿版背景輪播（遮罩+漸層）</title>
-
+<title>滿版背景輪播 + 多首背景音樂</title>
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 html, body { width:100%; height:100%; overflow:hidden; font-family:sans-serif; }
 
-/* 整個輪播區塊 */
-.carousel {
-  width:100vw;
-  height:100vh;
-  position:relative;
-  overflow:hidden;
-}
-
-/* 多張圖片容器 */
-.slides {
-  display:flex;
-  height:100%;
-  transition: transform 0.7s ease-in-out;
-}
-
-/* 單張圖片外層（含漸層遮罩） */
+.carousel { width:100vw; height:100vh; position:relative; overflow:hidden; }
+.slides { display:flex; height:100%; transition: transform 0.7s ease-in-out; }
 .slide {
-  position:relative;
-  width:100vw;
-  height:100vh;
-  flex-shrink:0;
-
-  /* 獨立遮罩，讓圖片無論明暗都能看清文字 */
-  background: linear-gradient(
-      to bottom,
-      rgba(0,0,0,0.25),
-      rgba(0,0,0,0.55)
-    );
+  position:relative; width:100vw; height:100vh; flex-shrink:0;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.25), rgba(0,0,0,0.55));
+}
+.slide img, .slide video {
+  width:100%; height:100%; object-fit:cover;
+  position:absolute; top:0; left:0; z-index:-1;
 }
 
-/* 圖片保持比例 & 滿版裁切 */
-.slide img {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  position:absolute;
-  top:0;
-  left:0;
-  z-index:-1;
-}
-
-/* 中央文字 */
 .overlay-text {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-  text-align:center;
-  color:white;
-  z-index:10;
+  position:absolute; top:50px; left:50%; transform:translateX(-50%);
+  text-align:center; color:white; z-index:10;
   text-shadow: 0 4px 10px rgba(0,0,0,0.6);
 }
-
-.overlay-text h1 {
-  font-size:2em;
-  margin-bottom:10px;
-}
-
+.overlay-text h1 { font-size:2em; margin-bottom:10px; }
 .overlay-text button {
-  padding:10px 20px;
-  font-size:1.2em;
-  border:none;
-  border-radius:10px;
-  background:rgba(255,255,255,0.2);
-  color:white;
-  backdrop-filter: blur(4px);
-  cursor:pointer;
+  padding:10px 20px; font-size:1.2em; border:none; border-radius:10px;
+  background:rgba(255,255,255,0.2); color:white; backdrop-filter: blur(4px); cursor:pointer;
 }
 
-/* 底部圓點 */
 .dots {
-  position:absolute;
-  bottom:25px;
-  left:50%;
-  transform:translateX(-50%);
-  display:flex;
-  gap:10px;
-  z-index:20;
+  position:absolute; bottom:25px; left:50%; transform:translateX(-50%);
+  display:flex; gap:10px; z-index:20;
 }
+.dot { width:12px; height:12px; border-radius:50%; background: rgba(255,255,255,0.4); cursor:pointer; }
+.dot.active { background:white; }
 
-.dot {
-  width:12px;
-  height:12px;
-  border-radius:50%;
-  background: rgba(255,255,255,0.4);
-  cursor:pointer;
+.music-btn {
+  width:55px; height:55px; border-radius:50%; background: rgba(255,255,255,0.25);
+  backdrop-filter: blur(6px); position:fixed; right:20px; bottom:20px;
+  display:flex; justify-content:center; align-items:center; cursor:pointer;
+  transition:0.3s; box-shadow:0 4px 14px rgba(0,0,0,0.3); z-index:30;
 }
-
-.dot.active {
-  background: white;
-}
+.music-btn:hover { transform: scale(1.1); }
+.icon { width:22px; height:22px; display:flex; justify-content:space-between; align-items:flex-end; }
+.icon span { width:4px; background:#fff; border-radius:2px; animation:bounce 1s infinite ease-in-out; opacity:0.9; }
+.icon span:nth-child(1){height:7px; animation-delay:0s;}
+.icon span:nth-child(2){height:13px; animation-delay:0.2s;}
+.icon span:nth-child(3){height:9px; animation-delay:0.4s;}
+@keyframes bounce {0%{transform:scaleY(1);}50%{transform:scaleY(2.2);}100%{transform:scaleY(1);}}
+.music-paused span {animation-play-state:paused !important; opacity:0.4;}
 </style>
 </head>
 <body>
 
 <div class="carousel">
   <div class="slides">
-
-    <!-- 圖片改獨立成 slide，並自動適應大小 -->
-    <div class="slide">
-      <img src="images/LINE_NOTE_251114_1.jpg">
-    </div>
-    <div class="slide">
-      <img src="images/LINE_NOTE_251114_2.jpg">
-    </div>
-    <div class="slide">
-      <img src="images/LINE_NOTE_251114_3.jpg">
-    </div>
-
+    <div class="slide"><img src="images/LINE_NOTE_251114_1.jpg"></div>
+    <div class="slide"><video src="videos/1.mp4" muted playsinline></video></div>
+    <div class="slide"><img src="images/LINE_NOTE_251114_2.jpg"></div>
+    <div class="slide"><img src="images/LINE_NOTE_251114_3.jpg"></div>
   </div>
 
   <div class="overlay-text">
-    <h1>歡迎來到我的網站</h1>
-    <button>開始體驗</button>
+    <h1>奇點</h1>
+    <button>相遇</button>
   </div>
 
   <div class="dots"></div>
 </div>
 
+<!-- 背景音樂 -->
+<audio id="bgm" preload="auto"></audio>
+
+<!-- 音樂控制按鈕 -->
+<div id="musicControl" class="music-btn music-paused">
+  <div class="icon"><span></span><span></span><span></span></div>
+</div>
+
 <script>
-const slides = document.querySelector(".slides");
-const slideCount = document.querySelectorAll(".slide").length;
-let counter = 0;
-
-/* 動態生成圓點 */
+// ===== 背景輪播 =====
+const slidesContainer = document.querySelector(".slides");
+let slideElements = Array.from(document.querySelectorAll(".slide"));
 const dotsContainer = document.querySelector(".dots");
-for (let i = 0; i < slideCount; i++) {
+
+// 無縫輪播複製
+const firstClone = slideElements[0].cloneNode(true);
+const lastClone = slideElements[slideElements.length-1].cloneNode(true);
+slidesContainer.appendChild(firstClone);
+slidesContainer.insertBefore(lastClone, slideElements[0]);
+slideElements = document.querySelectorAll(".slide"); // 更新 NodeList
+
+let counter = 1;
+slidesContainer.style.transform = `translateX(${-counter*100}vw)`;
+
+// 圓點
+const dots = [];
+for(let i=0;i<slideElements.length-2;i++){
   const dot = document.createElement("div");
-  dot.classList.add("dot");
-  if (i === 0) dot.classList.add("active");
-  dotsContainer.appendChild(dot);
-
-  dot.addEventListener("click", () => {
-    counter = i;
+  if(i===0) dot.classList.add("active");
+  dot.addEventListener("click", ()=>{
+    counter = i+1;
     updateSlide();
-    resetInterval();
+    startInterval();
   });
-}
-const dots = document.querySelectorAll(".dot");
-
-/* 更新畫面 */
-function updateSlide() {
-  slides.style.transform = `translateX(${-counter * 100}vw)`;
-  dots.forEach((d, i) => d.classList.toggle("active", i === counter));
+  dotsContainer.appendChild(dot);
+  dots.push(dot);
 }
 
-/* 自動輪播 */
-let interval = setInterval(() => {
-  counter = (counter + 1) % slideCount;
-  updateSlide();
-}, 4000);
+function updateSlide(){
+  slidesContainer.style.transition = "transform 0.7s ease-in-out";
+  slidesContainer.style.transform = `translateX(${-counter*100}vw)`;
+  dots.forEach((d,i)=>d.classList.toggle("active", i === counter-1));
+}
 
-function resetInterval() {
+// 自動輪播
+let interval;
+function startInterval(){
   clearInterval(interval);
-  interval = setInterval(() => {
-    counter = (counter + 1) % slideCount;
-    updateSlide();
-  }, 4000);
+  const currentSlide = slideElements[counter];
+  const video = currentSlide.querySelector("video");
+  if(video){
+    video.currentTime = 0;
+    video.play();
+    video.onended = nextSlide;
+  } else {
+    interval = setTimeout(nextSlide, 4000);
+  }
 }
 
-/* 手勢滑動 */
-let startX = 0;
-slides.addEventListener("touchstart", e => startX = e.touches[0].clientX);
-slides.addEventListener("touchend", e => {
-  let endX = e.changedTouches[0].clientX;
-  if (endX - startX > 50) counter = (counter - 1 + slideCount) % slideCount;
-  else if (startX - endX > 50) counter = (counter + 1) % slideCount;
+function nextSlide(){
+  counter++;
   updateSlide();
-  resetInterval();
+  startInterval();
+}
+
+// 無縫處理
+slidesContainer.addEventListener("transitionend", ()=>{
+  if(counter >= slideElements.length-1){
+    slidesContainer.style.transition = "none";
+    counter = 1;
+    slidesContainer.style.transform = `translateX(${-counter*100}vw)`;
+  } else if(counter===0){
+    slidesContainer.style.transition = "none";
+    counter = slideElements.length-2;
+    slidesContainer.style.transform = `translateX(${-counter*100}vw)`;
+  }
+});
+
+// 手勢滑動
+let startX=0;
+slidesContainer.addEventListener("touchstart", e=>startX=e.touches[0].clientX);
+slidesContainer.addEventListener("touchend", e=>{
+  let endX = e.changedTouches[0].clientX;
+  if(endX-startX>50) counter=(counter-1+slideElements.length)%slideElements.length;
+  else if(startX-endX>50) counter=(counter+1)%slideElements.length;
+  updateSlide();
+  startInterval();
+});
+
+// 啟動輪播
+startInterval();
+
+// ===== 多首背景音樂 =====
+const playlist = ["audio/1-music.mp3","audio/2-music.mp3","audio/3-music.mp3"];
+let index = 0;
+const bgm = document.getElementById("bgm");
+const musicControl = document.getElementById("musicControl");
+
+function playCurrentSong(){
+  bgm.src = playlist[index];
+  bgm.play().then(()=>musicControl.classList.remove("music-paused"))
+         .catch(()=>console.log("自動播放被阻擋"));
+}
+
+bgm.addEventListener("ended", ()=>{
+  index = (index+1)%playlist.length;
+  playCurrentSong();
+});
+
+document.addEventListener("DOMContentLoaded", playCurrentSong);
+
+musicControl.addEventListener("click", ()=>{
+  if(bgm.paused){ bgm.play(); musicControl.classList.remove("music-paused"); }
+  else { bgm.pause(); musicControl.classList.add("music-paused"); }
 });
 </script>
-
 </body>
 </html>
